로그인 정보 세션 저장을 위해 추가 - iron-session

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.4.1",
+    "iron-session": "^8.0.4",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
